add google.type.Money, fix boolean output
