# internal/generator/testdata/pet-api-doc.json
@@ -24,7 +24,7 @@
               "type": "integer"
             },
             {
-              "type": "bool"
+              "type": "boolean"
             },
             {
               "type": "array"
@@ -35,6 +35,26 @@
           ]
         },
         "type": "array"
+      },
+      "google.type.Money": {
+        "description": "Represents an amount of money with its currency type",
+        "properties": {
+          "currency_code": {
+            "description": "The 3-letter currency code defined in ISO 4217.",
+            "type": "string"
+          },
+          "nanos": {
+            "description": "Number of nano (10^-9) units of the amount.\nThe value must be between -999,999,999 and +999,999,999 inclusive.\nIf `units` is positive, `nanos` must be positive or zero.\nIf `units` is zero, `nanos` can be positive, zero, or negative.\nIf `units` is negative, `nanos` must be negative or zero.\nFor example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.",
+            "format": "int32",
+            "type": "integer"
+          },
+          "units": {
+            "description": "The whole units of the amount.\nFor example if `currencyCode` is `\"USD\"`, then 1 unit is one US dollar.",
+            "format": "int64",
+            "type": "integer"
+          }
+        },
+        "type": "object"
       },
       "payment.v1alpha1.Order": {
         "description": "Order represents a monetary order.",
